[project]
name = "langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-openai>=0.3.16",
]

[dependency-groups]
dev = [
    "langchain",
]

[tool.uv.sources]
langchain = { workspace = true }
